scrollbar fix & EK 88 matches check

--- a/SoccerPoolSim/wwwroot/css/site.css
+++ b/SoccerPoolSim/wwwroot/css/site.css
@@ -63,9 +63,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center bottom;
-    height: 100%;
     width: 100%;
-    position: fixed;
+    overflow: auto;
 }
 
 .footer {
